crates/pg_syntax/tests/snapshots/postgres_regress/subselect@127.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into outer_7597 values (1, null);"
---
InsertStmt@0..40
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "outer_7597"
  Whitespace@22..23 " "
  SelectStmt@23..38
    Values@23..29 "values"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..38
      AConst@31..32
        Iconst@31..32 "1"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..38
        NullP@34..38 "null"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

