crates/pg_syntax/tests/snapshots/postgres_regress/subselect@129.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into inner_7597 values(0, null);"
---
InsertStmt@0..39
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "inner_7597"
  Whitespace@22..23 " "
  SelectStmt@23..37
    Values@23..29 "values"
    Ascii40@29..30 "("
    List@30..37
      AConst@30..31
        Iconst@30..31 "0"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..37
        NullP@33..37 "null"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

