crates/pg_syntax/tests/snapshots/postgres_regress/subselect@138.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into inner_text values ('123', '456');"
---
InsertStmt@0..45
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "inner_text"
  Whitespace@22..23 " "
  SelectStmt@23..43
    Values@23..29 "values"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..43
      AConst@31..36
        Sconst@31..36 "'123'"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..43
        Sconst@38..43 "'456'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

